# RNNG-Dynet2

./: CMakeLists.txt  README.md
rnng/: CMakeLists.txt
rnng/nt-parser/: eval.cc  nt-parser-gen.cc  nt-parser.cc  oracle.cc  pretrained.cc
