CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

foreach(FOLDER rnng/nt-parser ${MP_EXAMPLES})
  set(TARGET nt-parser)
  ADD_EXECUTABLE(${TARGET} ${FOLDER}/${TARGET}.cc ${FOLDER}/eval.cc ${FOLDER}/oracle.cc ${FOLDER}/pretrained.cc)
  if (WITH_CUDA_BACKEND)
    target_link_libraries(${TARGET} dynet boost_program_options boost_serialization ${LIBS})
    CUDA_ADD_CUBLAS_TO_TARGET(${TARGET})
  else()
    target_link_libraries(${TARGET} dynet boost_program_options boost_serialization ${LIBS})
  endif (WITH_CUDA_BACKEND)
  if(UNIX AND NOT APPLE)
    target_link_libraries(${TARGET} rt)
  endif()
endforeach()

foreach(FOLDER rnng/nt-parser ${MP_EXAMPLES})
  set(TARGET nt-parser-gen)
  ADD_EXECUTABLE(${TARGET} ${FOLDER}/${TARGET}.cc ${FOLDER}/eval.cc ${FOLDER}/oracle.cc ${FOLDER}/pretrained.cc)
  if (WITH_CUDA_BACKEND)
   target_link_libraries(${TARGET} dynet boost_program_options boost_serialization ${LIBS})
    CUDA_ADD_CUBLAS_TO_TARGET(${TARGET})
  else()
    target_link_libraries(${TARGET} dynet boost_program_options boost_serialization ${LIBS})
  endif (WITH_CUDA_BACKEND)
  if(UNIX AND NOT APPLE)
    target_link_libraries(${TARGET} rt)
  endif()
endforeach()
